# sudoku-cpp

./: .gitignore  CMakeLists.txt  README.md  sudoku  sudoku.cpp  sudoku_example.cpp
.github/workflows/: c-cpp.yml
debian/: changelog
include/: sudoku.hpp  sudoku_solver_backtracking.hpp
puzzles/: crazy.csv  easy.csv  hard.csv  medium.csv
src/: sudoku.cpp  sudoku_example.cpp  sudoku_solver_backtracking.cpp
